# Sasso_Radar_Tower

./: .env.example  .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  uninstall.sh
docs/: ANFORDERUNGEN.md  prompt-adsbdb-openaip (1).md  prompt-adsbdb-openaip.md  prompt-flugzeug-icons.md
flugradar/: __init__.py  __main__.py  cli.py  main.py
flugradar/assets/icons/aircraft/: LICENSE.txt  SOURCE.md
flugradar/config/: settings.py
flugradar/data_sources/: adsb_fi.py  adsbdb.py  aircraft_photo.py  airline_branding.py  airports.py  demo.py  enrichment.py  geo.py  models.py  projection.py  weather.py
flugradar/display/: aircraft_icons.py  app.py  draw_helpers.py  fonts.py  gestures.py  icon_mapping.py  mask.py  nav.py  renderer.py  scaling.py  theme.py
flugradar/display/screens/: about.py  clock.py  detail.py  radar.py  settings_screen.py
flugradar/maps/: compositor.py  tiles.py
flugradar/tests/: test_adsb_fi.py  test_adsbdb.py  test_aircraft_icons.py  test_aircraft_photo.py  test_enrichment.py  test_geo.py  test_gestures.py  test_icon_mapping.py  test_mask.py  test_projection.py  test_settings.py  test_tiles.py  test_weather.py  test_web.py
flugradar/web/: app.py  run.py
flugradar/web/static/: style.css
flugradar/web/templates/: about.html  api_keys.html  base.html  display.html  index.html  radar.html  system.html  weather.html
system/: flugradar-display-start.sh
system/plymouth/: generate_logo.py  sasso-radar.plymouth  sasso-radar.script
system/systemd/: flugradar-display.service  flugradar-web.service
